[package]
name = "alipay-rs"
version = "0.1.4"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "Simple encapsulation of Alipay interface"
keywords = ["alipay"]
repository = "https://github.com/chenhuaiyuan/alipay-rs"
documentation = "https://docs.rs/alipay-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "examples/*"
]

[dependencies]
ureq = { version = "2", features = ["json", "charset"] }

# datetime
chrono = { version = "0.4", features = ["serde"] }

# json
serde = {version = "1", features = ["derive"]}
serde_json = "1"

thiserror = "1.0"

openssl = "0.10"

md-5 = "0.9.1"
hex = "0.4.3"

serde_urlencoded = "0.7"

alipay_derive = "0.1"

multipart = "0.18"