[package]
name = "alipay-rs"
version = "0.3.0"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "Simple encapsulation of Alipay interface"
keywords = ["alipay"]
repository = "https://github.com/chenhuaiyuan/alipay-rs"
documentation = "https://docs.rs/alipay-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "examples/*"
]

[features]
default = ["singlethreading"]
multithreading = []
singlethreading = []

[dependencies]
ureq = { version = "2", features = ["json", "charset"] }

serde = {version = "1", features = ["derive"]}
serde_json = "1"

openssl = { version = "0.10", features = ["vendored"] }

hex = "0.4.3"

serde_urlencoded = "0.7"

struct-map = "0.1"

multipart = "0.18"

string-builder = "0.2.0"
