[package]
name = "alipay-rs"
version = "0.4.6"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "Simple encapsulation of Alipay interface"
keywords = ["alipay"]
repository = "https://github.com/chenhuaiyuan/alipay-rs"
documentation = "https://docs.rs/alipay-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["alipay_params", "alipay_macros"]
exclude = ["examples/alipay-test", "examples/micro_app_test", "examples/private_key_test"]

[dependencies]
ureq = { version = "2", features = ["json", "charset"] }

serde = {version = "1", features = ["derive"]}
serde_json = "1"

openssl = { version = "0.10", features = ["vendored"] }

hex = "0.4.3"

serde_urlencoded = "0.7"

multipart = "0.18"

# alipay_params = "0.1"
alipay_params = {path = "alipay_params"}

futures = "0.3"

# async-trait = "0.1"
