[package]
name = "alipay_macros"
version = "0.1.1"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "alipay-rs macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
syn = {version = "1.0", features = ["derive"]}
quote = "1.0"
proc-macro2 = "1.0"
