[package]
name = "alipay-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
alipay-rs = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
chrono = "0.4"
alipay_params = "0.1"
